#        29-Apr-2009, K. Luchini         (LUCHINI):
#          release etherPSC-R2-0-0-lcls1 
#        06-May-2008, K. Luchini         (LUCHINI):
#          release etherPSC-R2-0-2  
#        08-Oct-2007, K. Luchini         (LUCHINI):
#          release etherPSC-R2-0-1  
#        30-Aug-2007, K. Luchini         (LUCHINI):
#          release etherPSC-R2-0-0  
#
#==============================================================
#
#
etherPSC-R2-0-2:     13-Jun-2016, K. Luchini
                      import lastest version from spear with 
                      test application included, and epics slider fix.
                      this does not have reverse polarity changes

etherPSC-R2-0-1_1-1: 18-Apr-2015     E. Williams
                      Upgraded sequencer
                      from seq-R2-1-6_1-0 to seq-R2-1-6_1-3
etherPSC-R2-0-1_1-0: 05-Jul-2012     K. Luchini
                       Upgraded sequencer 
                       from seq-R2-1-3-lcls1 to seq-R2-1-6_1-0

etherPSC-R2-0-1-lcls6: Upgrade to newer Sequencer: seq-R2-1-3-lcls1

etherPSC-R2-0-1-lcls5: 07-Sep-2011, K. Luchini (LUCHINI):
                       Upgrade seq vrom seq-R2-0-11-lcls3 to seq-R2-0-11-lcls4

etherPSC-R2-0-1-lcls4: Build against base-R3-13-8-2-lcls6 (RTEMS 4.9.3)

etherPSC-R2-0-0-lcls2: Build against base-R3-14-8-2-lcls5 (RTEMS 4.9.1)
                       and add turn on reverse polarity

etherPSC-R2-0-1-lcls2: Build against base-R3-14-8-2-lcls5 (RTEMS 4.9.3)

etherPSC-R2-0-1-lcls1: Pick-up linux-x86 endian fix from Spear3 by 
                       Stephanie Allison 

etherPSC-R2-0-0-lcls1: Build against base-R3-14-8-2-lcls3 (RTEMS 4.9.1)
                       use lcls convension for tagging pkgs maintained outside 

etherPSC-R2-0-2: Build against base-R3-14-8-2-lcls2 (RTEMS 4.7.1)

etherPSC-R2-0-1: modifications needed to bring the module to EPICS R3-14-9 standard
                 Build against base-R3-14-9-lcls1 (RTEMS 4.7.1)

etherPSC-R2-0-0: Initial Import

   

 
