@@ -1,0 +1,18 @@
+#==============================================================================
+#
+# Abs:  Database substitutions for one Bipolary Ethernet power supply.
+#
+# Name:  etherPSCBipolar.substitutions
+#
+#==============================================================================
+#
+file etherPSC.template
+{
+  pattern {   ps     , grp     ,   dtyp   ,link, node,  ip   , drvl   ,  drvh    , CurrFLNK , delta  , wfrac  , vi   , vis , egu , iv   , ivs , ivegu , min   , thigh , thihi }
+          { $(psi)   , $(grpi) , EtherPSC , 0  ,  0  , $(ipi),-$(drvh), $(drvhi) , ""       , 100000 , 0.0001 , Curr ,  I  ,  A  , Volt ,  V  ,  V    , 0.002 ,   40  ,  45   }
+}
+file commonPS.template
+{
+  pattern {   ps     , grp     ,prec, drvl   ,  drvh   , delay , vi   , vis , egu , rtime , didt , delta  , wfrac , min   }
+          { $(psi)   , $(grpi) , 3  ,-$(drvh), $(drvhi), 3     , Curr,  I   ,  A  ,  -1   ,  10  , 0.00   , 0.005 , 0.000 }
+}
